# EOSEasyContract

./: EOSCPPWatch.sln  README.md  release.bat
EOSCPPManagerLib/: DockerHelper.cs  EOSCPPManagerCore.cs  EOSCPPManagerLib.csproj  Util.cs  Watcher.cs
EOSCPPManagerLib/templateFiles/: CMakeLists.txt  _gitignore  build.sh  test.cpp  test.hpp
EOSCPPWatch/: DockerHelper.cs  EOSCPPWatch.csproj  Program.cs  Watcher.cs  appsettings.json
EOSCPPWatch/Properties/: launchSettings.json
EOSEasyContract/: EOSEasyContract.csproj  NLog.config  Program.cs  appsettings.json
EOSEasyContract/Properties/: launchSettings.json
EOSEasyContract/Properties/PublishProfiles/: FolderProfile.pubxml
